# Deployment-Risk-Agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SETUP.md  cloudbuild.yaml  package-lock.json  package.json  project_documentation.md  pyproject.toml  requirements.txt  run_mcp_wrapper.sh  vercel.json
.github/workflows/: canary.yaml
agent/: __init__.py  analyzer.py  llm_client.py  mock_data.py  orchestrator.py  report.py  simulator.py  tools.py  validator.py
api/: __init__.py  dependencies.py  index.py  main.py  models.py
canary_agent/: __init__.py  agent.py  mcp_runner.py  mock_data.py
dtmcp/: __init__.py  schema.py
scripts/: seed_demo_environment.py
tests/: test_analyzer.py  test_e2e.py
web-ui/: package-lock.json  package.json
web-ui/src/: App.jsx  api.js  index.css
web-ui/src/components/: Header.jsx  LeftPanel.jsx  RightPanel.jsx
web-ui/src/components/result-parts/: ConditionsBox.jsx  DecisionBanner.jsx  MetricsRow.jsx  ReasoningBox.jsx  ServiceHealthList.jsx  TopologyGraph.jsx
web-ui/src/components/states/: IdleState.jsx  LoadingState.jsx  ResultState.jsx
